--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="index.js"></script>
-    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-   
+   <div id="task-container"></div>
   </body>
 </html>
