add task class for render

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           
     </div>
    
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/task.js"></script>
     <script src="calendar-script.js"></script>
   </body>
 </html>
