add delete task functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
     </div>
    
-    <script type="text/javascript" src="index.js"></script>
-    <script src="calendar-script.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/task.js"></script>
   </body>
 </html>
